--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,134 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa&family=Poppins:wght@300;400&display=swap');
+
+* {
+  box-sizing: border-box;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  font-family: 'Comfortaa', sans-serif;
+}
+
+.container {
+  max-width: 500px;
+  margin: 30px auto;
+  overflow: auto;
+  min-height: 300px;
+  border: 1px solid steelblue;
+  padding: 30px;
+  border-radius: 5px;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.header h1 {
+  font-weight: bold;
+}
+
+.btn {
+  display: inline-block;
+  background: rgb(66, 95, 91);
+  color: #fff;
+  border: 0.05px solid rgb(204, 204, 204);
+  padding: 10px 20px;
+  margin: 5px;
+  border-radius: 5pt;
+  cursor: pointer;
+  text-decoration: none;
+  font-size: 15px;
+  font-family: inherit;
+  box-shadow: inset 2px -2px 3px 1px rgba(245, 245, 245, 0.74),
+              inset -1px 1px 3px 0.5px rgba(136, 136, 136, 0.74);
+}
+
+.btn:focus {
+  outline: 3.2px solid rgba(97, 218, 255, 0.411);
+}
+
+.btn:active {
+  transform: scale(0.98);
+}
+
+.btn-block {
+  display: block;
+  width: 100%;
+  box-shadow: none;
+}
+
+li {
+  list-style: circle;
+}
+
+.task.reminder li {
+  list-style: none;
+}
+
+.task.reminder li::marker {
+  content: "📌";
+}
+
+.task {
+  background: #ebf8f6;
+  margin: 5px;
+  padding: 10px 20px;
+  cursor: pointer;
+  border-radius: 4pt;
+  box-shadow: inset -1px 1.5px 1px 1px lightgrey;
+}
+
+.task.reminder {
+  border-left: 5px solid rgb(160, 223, 13);
+  padding-left: 30px;
+}
+
+.task h3 {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.add-form {
+  margin-bottom: 40px;
+}
+
+.form-control {
+  margin: 20px 0;
+}
+
+.form-control label {
+  display: block;
+}
+
+.form-control input {
+  width: 100%;
+  height: 40px;
+  margin: 5px;
+  padding: 3px 7px;
+  font-size: 17px;
+}
+
+.form-control-check {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.form-control-check label {
+  flex: 1;
+}
+
+.form-control-check input {
+  flex: 2;
+  height: 20px;
+}
+
+footer {
+  margin-top: 30px;
+  text-align: center;
 }
